# memharness

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile.worker  LICENSE  PLAN.md  README.md  docker-compose.workers.yml  docker-compose.yml  docs.html  index.html  markdown-page.html  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
assets/js/: 046c8b43.05103143.js  046c8b43.1008e121.js  0ce121e6.1d7721ca.js  0ce121e6.5fd386f3.js  0ce121e6.6887d29a.js  0ce121e6.c721ae7a.js  0e384e19.429509b2.js  0e384e19.740cf2ea.js  0e384e19.aec5bacd.js  0e384e19.fd1339cb.js  1031.f918a745.js  1679.2bc52219.js  1736cbe2.afb3bfca.js  1736cbe2.fa187a1c.js  1b04c76a.43a4e401.js  1b04c76a.843d076f.js  1b04c76a.b31f7bf4.js  1b04c76a.edacaeca.js  1b313d99.70c9b667.js  1b313d99.7358ffbf.js  1b313d99.82a63df7.js  1c51bb8d.0fba6659.js  1c51bb8d.11f83000.js  1c51bb8d.1d789172.js  1c51bb8d.2f6c58ec.js  1c51bb8d.5abfc7be.js  1c51bb8d.64a587e8.js  1c51bb8d.a81193bb.js  1c51bb8d.af5b653a.js  1c51bb8d.cef20138.js  1c51bb8d.dc7f01df.js  1c51bb8d.e4000e1b.js  1c835aff.1cbeb9b5.js  1c835aff.741855b1.js  1c835aff.767730cc.js  1c835aff.936695ae.js  1c835aff.ea13a39e.js  1df93b7f.5bdb32ca.js  1df93b7f.8435a87f.js  1df93b7f.850ff9d3.js  (+172 more)
docs/: docusaurus.config.ts  getting-started.html  package-lock.json  sidebars.ts  usage-langchain.html
docs/agents/: consolidator.html  context-assembler.html  entity-extractor.html  gc.html  overview.html  summarizer.html
docs/api/: agents.html  backends.html  config.html  harness.html  types.html
docs/backends/: in-memory.html  postgresql.html  sqlite.html
docs/concepts/: configuration.html  deterministic-vs-ai.html  memory-lifecycle.html  memory-types.html
docs/docs/: getting-started.md  intro.md  usage-langchain.md
docs/docs/agents/: consolidator.md  context-assembler.md  entity-extractor.md  gc.md  overview.md  summarizer.md
docs/docs/api/: agents.md  backends.md  config.md  (+2 more)
docs/integrations/: langchain.html  langgraph.html
docs/memory-types/: conversational.html  entity.html  file.html  knowledge-base.html  persona.html  skills.html  summary.html  tool-log.html  toolbox.html  workflow.html
docs/middleware/: overview.html
docs/tools/: overview.html  self-exploration.html  toolbox-vfs.html
examples/: langchain_agent.py
scripts/: worker.py
src/memharness/: __init__.py  exceptions.py  harness.py  registry.py  types.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agents.py  test_memory_harness.py  test_sqlite_backend.py
tests/unit/: __init__.py  test_agent_workflow.py  test_agents.py  test_config.py  test_context_assembler.py  test_embedding.py  test_fast_path.py  test_integrations.py  test_middleware.py  test_registry.py  test_slow_path.py  test_summarization_flow.py  test_tools.py  test_types.py
(+84 files in other folders)
