[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memharness"
version = "0.5.2"
description = "Framework-agnostic memory infrastructure for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<4.0"
authors = [
    { name = "Ayush Sonuu", email = "sonuayush55@gmail.com" }
]
keywords = [
    "ai",
    "agents",
    "memory",
    "llm",
    "langchain",
    "vector-database",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.10.0",
    "aiosqlite>=0.20.0",
    "numpy>=2.0.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
]
embeddings = [
    "langchain-huggingface>=1.0.0",
    "sentence-transformers>=5.3.0",
]
openai = [
    "openai>=2.29.0",
]
anthropic = [
    "anthropic>=0.86.0",
]
langchain = [
    "langchain>=1.2.0",
    "langchain-core>=0.3.0",
]
all = [
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "langchain-huggingface>=1.0.0",
    "sentence-transformers>=5.3.0",
    "openai>=2.29.0",
    "anthropic>=0.86.0",
    "langchain>=1.2.0",
    "langchain-core>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/AyushSonuu/memharness"
Documentation = "https://ayushsonuu.github.io/memharness"
Repository = "https://github.com/AyushSonuu/memharness"
Issues = "https://github.com/AyushSonuu/memharness/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/memharness"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=memharness --cov-report=term-missing"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long
    "B008",   # do not perform function calls in argument defaults
    "B017",   # do not assert blind exception
    "UP042",  # prefer StrEnum (keep str, Enum for 3.10 compat docs)
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py313"]
